# internal/users/model.go
@@ -3,14 +3,11 @@ package users
 import (
 	"database/sql"
 	"time"
-
-	"github.com/wesleyburlani/go-rest-api/pkg/crypto"
-	"gorm.io/gorm"
 )
 
 type CreateUserProps struct {
-	Email    sql.NullString `validate:"email,required"`
-	Password sql.NullString `validate:"required"`
+	Email    string `validate:"email,required"`
+	Password string `validate:"required"`
 }
 
 type UpdateUserProps struct {
@@ -19,19 +16,9 @@ type UpdateUserProps struct {
 }
 
 type User struct {
-	ID        uint           `json:"id" gorm:"primaryKey;auto_increment:true"`
-	Email     sql.NullString `json:"email" gorm:"unique,not null,default:null"`
-	Password  sql.NullString `json:"password,omitempty" gorm:"not null"`
-	CreatedAt time.Time      `json:"-"`
-	UpdatedAt time.Time      `json:"-"`
-}
-
-func (u *User) BeforeCreate(tx *gorm.DB) (err error) {
-	u.Password.String, _ = crypto.GenerateHashFromPassword(u.Password.String)
-	return nil
-}
-
-func (u *User) BeforeSave(tx *gorm.DB) (err error) {
-	u.Password.String, _ = crypto.GenerateHashFromPassword(u.Password.String)
-	return nil
+	ID        int64     `json:"id"`
+	Email     string    `json:"email"`
+	Password  string    `json:"password,omitempty"`
+	CreatedAt time.Time `json:"-"`
+	UpdatedAt time.Time `json:"-"`
 }
