# swagger/swagger.json
@@ -49,18 +49,6 @@
         }
     },
     "definitions": {
-        "sql.NullString": {
-            "type": "object",
-            "properties": {
-                "string": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if String is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
         "users.PostBody": {
             "type": "object",
             "required": [
@@ -80,13 +68,13 @@
             "type": "object",
             "properties": {
                 "email": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
                 "password": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 }
             }
         }
